--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 #Токен Telegram бота
-TOKEN='Введите токен телеграм бота, полученный в BotFather в эту строку'
+TELEGRAM_TOKEN='Введите токен телеграм бота, полученный в BotFather в эту строку'
 
 #Токен КП https://api.kinopoisk.dev/
-kinopoiskToken='Введите токен от API кинопоиска в эту строку'
-
-#Ссылка на чат Telegram
-chatUrl='Введите ссылку на чат Telegram в эту строку в формате https://t.me/...'
-
-#Короткая ссылка чата Telegram
-chatId='Введите коротку ссылку на чат Telegram в эту строку в формате @...'
+KP_TOKEN='Введите токен от API кинопоиска в эту строку'
 
 #Токен с сайта https://kinoclub.dev
-kinoDevToken='Введите токен с сайта kiloclub в эту строку'
+KINOCLUB_TOKEN='Введите токен с сайта kiloclub в эту строку'
+
+#Ссылка на чат Telegram
+CHAT_URL='Введите ссылку на чат Telegram в эту строку в формате https://t.me/...'
+
+#Короткая ссылка чата Telegram
+CHAT_ID='Введите коротку ссылку на чат Telegram в эту строку в формате @...'
