--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ aiogram==3.4.1
 python-dotenv==1.0.1
 pydantic-settings==2.1.0
 aiohttp==3.9.3
+urllib3==1.26.17
+aiofiles==23.2.1
+yt-dlp==2024.03.10
