--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,11 +8,20 @@ services:
     restart: unless-stopped
     depends_on:
       - telegram-bot-api
+    volumes:
+      - ./bot:/app/bot
     env_file:
       - .env
 
+  redis:
+    image: redis:7.2.4-alpine3.19
+    restart: unless-stopped
+    volumes:
+      - cache:/data
+
   telegram-bot-api:
     image: aiogram/telegram-bot-api:latest
+    restart: unless-stopped
     environment:
       TELEGRAM_API_ID: "${TELEGRAM_API_ID}"
       TELEGRAM_API_HASH: "${TELEGRAM_API_HASH}"
